--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,13 +14,15 @@
         android:theme="@style/Theme.Nongki"
         tools:targetApi="31">
         <activity
-            android:name=".SearchActivity"
+            android:name=".view.BottomNavigation.BottomNavActivity"
+            android:exported="false" >
+
+        </activity>
+        <activity
+            android:name=".view.search.SearchActivity"
             android:exported="false" />
         <activity
-            android:name=".AuthActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.rekomendasi.MainActivity"
+            android:name=".view.auth.AuthActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +30,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".view.rekomendasi.MainActivity"
+            android:exported="false"></activity>
     </application>
 
 </manifest>
